Revert syntax highlighting in diffs, it was causing readability issues

--- a/github-dark.css
+++ b/github-dark.css
@@ -1960,7 +1960,7 @@
   .prose-diff .changed ins pre, .prose-diff .changed .added,
   .prose-diff > .markdown-body ins pre, .prose-diff > .markdown-body ins code,
   .prose-diff > .markdown-body ins > div, .prose-diff > .markdown-body ins > p {
-    background: #002200 !important;
+    background: #002800 !important;
     border-color: #060 !important;
   }
   /* git diff line deletions (dark red) */
@@ -1973,7 +1973,7 @@
   .prose-diff > .markdown-body .changed .removed pre,
   .prose-diff > .markdown-body .changed .removed code,
   .prose-diff > .markdown-body .changed .removed > div {
-    background: #320000 !important;
+    background: #380000 !important;
     border-color: #600 !important;
   }
   /* hover highlight in code and diffs */
@@ -1983,25 +1983,27 @@
   }
   .highlight:not(.lines) tr:not(.inline-comments):hover td.blob-num-addition:not(.line-age),
   .highlight:not(.lines) tr:not(.inline-comments):hover td.blob-code-addition:not(.line-age) {
-    background: #083208 !important;
+    background: #103810 !important;
   }
   .highlight:not(.lines) tr:not(.inline-comments):hover td.blob-num-deletion:not(.line-age),
   .highlight:not(.lines) tr:not(.inline-comments):hover td.blob-code-deletion:not(.line-age) {
-    background: #420808 !important;
+    background: #481010 !important;
   }
   .highlight:not(.lines) tr:not(.inline-comments):hover td.selected-line.blob-num:not(.line-age),
   .highlight:not(.lines) tr:not(.inline-comments):hover td.selected-line.blob-code:not(.line-age),
   .highlight tr:not(.inline-comments):hover td[style^="background-color: rgb(248, 238, 199)"] {
-    background: #323208 !important;
+    background: #363610 !important;
   }
   .prose-diff > .markdown-body th.changed, .prose-diff > .markdown-body td.changed {
     background: #282818 !important;
   }
   .blob-code-addition .x , .highlight .blob-code-addition .x {
-    background: #155215 !important;
+    background: #252 !important;
+    color: #eee !important;
   }
   .blob-code-deletion .x, .highlight .blob-code-deletion .x {
-    background: #621515 !important;
+    background: #622 !important;
+    color: #eee !important;
   }
   /* git diff line numbers (med green) */
   .gi .diff-line-num, .gi .diff-line-code, .gi .diff-line-pre {
